# FPL-Transfer-Planner

./: .gitignore  DEF.xlsx  FWD.xlsx  FootballPoisson.py  FootballPoisson.xlsx  GK.xlsx  README.md  const.py  main.py  notes.md  pyproject.toml  requirements.txt  schedule.csv  utils.py
New Players/: MID.xlsx
NewPlayers/: DEF.xlsx  FWD.xlsx  GK.xlsx  MID.xlsx
Reports/: GW Preview.xlsx  GW Report.xlsx  Last5 Report.xlsx  Next5 Preview copy.xlsx  Next5 Preview.xlsx  Season Report copy.xlsx  Season Report.xlsx
data/: 2425-championship-teams.csv  2526-prem-teams-pastseason-with-saves.csv  team_mapping.json
myteam/: myteam_projection.py  myteam_stats.py
myteam/projection/: myteam_next5gws_currentseason.csv  myteam_next5gws_last5games.csv  myteam_nextgw_projection_currentseason.csv  myteam_nextgw_projection_last5games.csv
myteam/results/: myteam_currentseason_stats.csv  myteam_last5games_stats.csv
new_ver/: 2526.py  README.md  const.py  main.py
new_ver/data/: 2425-prem-teams.csv  2526-prem-teams-pastseason.csv  2526-prem-teams.csv
new_ver/myteam/: myteam_projection.py  myteam_stats.py
new_ver/players/: player_projection.py
new_ver/preseason_prep/: adjust_team_strengths.py  team_id.py  team_stats.py  team_strengths.py
new_ver/teams/: fixture_projection.py  get_fixtures.py
old_ver/: FootballPoisson.py  README.md
old_ver/NewPlayers/: DEF.xlsx  FWD.xlsx  GK.xlsx  MID.xlsx
old_ver/Reports/: GW Preview.xlsx  Next5 Preview.xlsx  Season Report copy.xlsx  Season Report.xlsx  ~$GW Preview.xlsx
players/: player_projection.py
prediction/: accuracy.csv  gw27_detailed.json  gw27_predict.json  gw27results.json  gw27results_last5.json  predict.py
teams/: fixture_projection.py  get_fixtures.py
(+115 files in other folders)
