[project]
name = "fpl-transfer-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "asgiref>=3.11.1",
    "beautifulsoup4>=4.14.3",
    "black>=26.1.0",
    "blinker>=1.9.0",
    "bs4>=0.0.2",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "distlib>=0.4.0",
    "django>=5.2.11",
    "django-crispy-forms>=2.5",
    "et-xmlfile>=2.0.0",
    "filelock>=3.24.3",
    "flask>=3.1.3",
    "fonttools>=4.61.1",
    "idna==3.10",
    "isort>=8.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "kiwisolver>=1.4.9",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "mdurl>=0.1.2",
    "mypy-extensions>=1.1.0",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "packaging>=24.2",
    "pandas>=2.3.3",
    "pathspec>=1.0.4",
    "pillow>=12.1.1",
    "platformdirs>=4.9.2",
    "pygments>=2.19.2",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "rich>=13.9.4",
    "ruff>=0.15.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "soccerdata>=1.8.8",
    "soupsieve==2.7",
    "sqlparse>=0.5.5",
    "statsmodels>=0.14.6",
    "tomli>=2.4.0",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "urllib3<2",
    "werkzeug>=3.1.6",
]

[tool.uv]
override-dependencies = [
    "idna>=3.10",
    "requests>=2.32.3",
    "soupsieve>=2.7",
    "beautifulsoup4>=4.12.0",
    "markdown-it-py>=3.0.0",
    "typing-extensions>=4.12.0",
]
